fix(material): ensure long label does not overflow

--- a/test/visual/vaadin-text-field/text-field-2.html
+++ b/test/visual/vaadin-text-field/text-field-2.html
@@ -40,6 +40,9 @@
       <p>
       label: <vaadin-text-field label="Foo"></vaadin-text-field>
       <p>
+      <p>
+      overflow label: <vaadin-text-field label="Very long label which definitely overflows"></vaadin-text-field>
+      <p>
       label and value: <vaadin-text-field label="Foo" value="Bar"></vaadin-text-field>
       <p>
       prefix and suffix:
