Add rows and cols propertie

--- a/demo/text-area-demos.html
+++ b/demo/text-area-demos.html
@@ -17,7 +17,18 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Maximum height</h3>
+    <h3>Controlling size with Rows & Cols</h3>
+    <vaadin-demo-snippet id="text-area-demos-text-area-rows-cols">
+      <template preserve-content>
+        <vaadin-text-area
+            label="Description"
+            placeholder="Write here ..."
+            rows="4"
+            cols="50"></vaadin-text-area>
+      </template>
+    </vaadin-demo-snippet>
+
+    <h3>Controlling size with maximum height</h3>
     <vaadin-demo-snippet id="text-area-demos-text-area-with-max-height">
       <template preserve-content>
         <style>
@@ -32,7 +43,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Minimum height</h3>
+    <h3>Controlling size with minimum height</h3>
     <vaadin-demo-snippet id="text-area-demos-text-area-with-min-height">
       <template preserve-content>
         <style>
