--- a/test/text-area.html
+++ b/test/text-area.html
@@ -120,7 +120,7 @@
             expect(textArea.hasAttribute('has-value')).to.be.true;
           });
 
-          it('setting value to undefine should not update has-value attribute', () => {
+          it('setting value to undefined should not update has-value attribute', () => {
             textArea.value = undefined;
             expect(textArea.hasAttribute('has-value')).to.be.false;
           });
@@ -130,7 +130,7 @@
             expect(textArea.hasAttribute('has-value')).to.be.false;
           });
 
-          // User could accidently set a 0 or false value
+          // User could accidentally set a 0 or false value
           it('setting number value updates has-value attribute', () => {
             textArea.value = 0;
             expect(textArea.hasAttribute('has-value')).to.be.true;
