--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -17,6 +17,8 @@ This program is available under Apache License Version 2.0, available at https:/
     <div class="vaadin-text-field-container">
 
       <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
+      
+      <div part="hint" on-click="focus" id="[[_hintId]]">[[hint]]</div>
 
       <div part="input-field" id="[[_inputId]]">
 
@@ -89,6 +91,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * `disabled` | Set to a disabled text field | :host
        * `has-value` | Set when the element has a value | :host
        * `has-label` | Set when the element has a label | :host
+       * `has-hint` | Set when the element has hint text | :host
        * `invalid` | Set when the element is invalid | :host
        * `input-prevented` | Temporarily set when invalid input is prevented | :host
        * `focused` | Set when the element is focused | :host
