--- a/demo/text-field-theme-demos.html
+++ b/demo/text-field-theme-demos.html
@@ -23,6 +23,14 @@
         <vaadin-text-field theme="small" label="Label" placeholder="Text field"></vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
+    
+    <h3>Hint position</h3>
+    <vaadin-demo-snippet id="text-field-theme-demos-sizes">
+      <template preserve-content>
+        <vaadin-text-field hint="Hint above text field"></vaadin-text-field>
+        <vaadin-text-field hint="Hint below text field" theme="hint-below"></vaadin-text-field>
+      </template>
+    </vaadin-demo-snippet>
 
 
   </template>
