--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -39,6 +39,7 @@
         padding-bottom: 0.4em;
         margin-left: calc(var(--lumo-border-radius-m) / 4);
         transition: color 0.2s;
+        order: 0;
       }
 
       [part="value"],
