--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -92,6 +92,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * `has-value` | Set when the element has a value | :host
        * `has-label` | Set when the element has a label | :host
        * `has-hint` | Set when the element has hint text | :host
+       * `has-error-message` | Set when the element has an error message | :host
        * `invalid` | Set when the element is invalid | :host
        * `input-prevented` | Temporarily set when invalid input is prevented | :host
        * `focused` | Set when the element is focused | :host
