--- a/test/accessibility.html
+++ b/test/accessibility.html
@@ -265,6 +265,7 @@
               tf = fixture(`${el}-error-fixture${fixtureName}`);
               input = tf.inputElement;
               err = tf.root.querySelector('[part=error-message]');
+              hint = tf.root.querySelector('[part=hint]');
             });
 
             it('should have an error element', function() {
@@ -287,15 +288,26 @@
               expect(err.getAttribute('aria-hidden')).to.equal('true');
             });
 
-            it('should not have aria-describedby attribute if valid', function() {
+            it('should not have aria-describedby attribute if valid and no hint text', function() {
               expect(input.hasAttribute('aria-describedby')).to.be.false;
             });
 
-            it('should have aria-describedby attribute when invalid', function() {
+            it('should have aria-describedby attribute with error message when invalid', function() {
               tf.validate();
               expect(input.getAttribute('aria-describedby')).to.equal(err.id);
             });
+            
+            it('should have aria-describedby attribute with hint text when hint is set', function () {
+              tf.hint = 'hint';
+              expect(input.getAttribute('aria-describedby')).to.equal(hint.id);
+            });
 
+            it('should have aria-describedby attribute with both hint text and error message when hint is set and input is invalid', function () {
+              tf.hint = 'hint';
+              tf.validate();
+              expect(input.getAttribute('aria-describedby')).to.equal(`${hint.id} ${err.id}`);
+            });
+            
             it('should have appropriate aria-live attribute', function() {
               expect(err.getAttribute('aria-live')).to.equal('assertive');
             });
