Add visual tests

--- a/test/visual/vaadin-text-field/text-field-2.html
+++ b/test/visual/vaadin-text-field/text-field-2.html
@@ -51,6 +51,8 @@
       <p>
       label and value: <vaadin-text-field label="Foo" value="Bar"></vaadin-text-field>
       <p>
+      label, hint and value: <vaadin-text-field label="Foo" value="Bar" hint="Baz"></vaadin-text-field>
+      <p>
       prefix and suffix:
         <vaadin-text-field label="Foo" value="Bar">
           <span slot="prefix">prefix</span>
