--- a/test/visual/vaadin-text-field/text-field-3.html
+++ b/test/visual/vaadin-text-field/text-field-3.html
@@ -49,6 +49,9 @@
       <p>
       <vaadin-text-field label="Label" invalid error-message="Error"></vaadin-text-field>
       <vaadin-text-field label="Label" value="value"></vaadin-text-field>
+      <p>
+      <vaadin-text-field label="Label" hint="Hint" invalid error-message="Error"></vaadin-text-field>
+      <vaadin-text-field hint="Hint" value="value"></vaadin-text-field>
     </fieldset>
   </form>
 
