--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -39,7 +39,7 @@ This program is available under Apache License Version 2.0, available at https:/
       }
 
       [part="label"]:empty,
-      [part="hint"]:empty {
+      [part="hint"] slot:empty {
         display: none;
       }
 
