--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -18,7 +18,9 @@ This program is available under Apache License Version 2.0, available at https:/
 
       <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
       
-      <div part="hint" on-click="focus" id="[[_hintId]]">[[hint]]</div>
+      <div part="hint" on-click="focus" id="[[_hintId]]">
+        <slot name="hint" on-slotchange="_hintSlotChanged">[[hint]]</slot>
+      </div>
 
       <div part="input-field" id="[[_inputId]]">
 
