--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -32,19 +32,19 @@
         color: var(--lumo-primary-text-color);
       }
 
+      :host([has-hint]) [part="hint"] slot:not(:empty)::after,
+      :host([has-hint]) [part="hint"] ::slotted(*)::after {
+        content: "";
+        display: block;
+        height: 0.4em;
+      }
+
       [part="hint"] {
         color: var(--lumo-secondary-text-color);
         font-size: var(--lumo-font-size-xs);
         line-height: var(--lumo-line-height-xs);
         margin-left: calc(var(--lumo-border-radius-m) / 4);
         transition: color 0.2s;
-        order: 0;
-      }
-
-      [part="hint"] slot:not(:empty)::after {
-        content: "";
-        display: block;
-        height: 0.4em;
       }
 
       [part="value"],
@@ -274,11 +274,13 @@
 
       /* Hint position */
 
-      :host([has-hint][theme~="hint-below"]) [part="hint"] slot:not(:empty)::after {
+      :host([has-hint][theme~="hint-below"]) [part="hint"] slot:not(:empty)::after,
+      :host([has-hint][theme~="hint-below"]) [part="hint"] ::slotted(*)::after {
         display: none;
       }
 
-      :host([has-hint][theme~="hint-below"]) [part="hint"] slot:not(:empty)::before {
+      :host([has-hint][theme~="hint-below"]) [part="hint"] slot:not(:empty)::before,
+      :host([has-hint][theme~="hint-below"]) [part="hint"] ::slotted(*)::before {
         content: "";
         display: block;
         height: 0.4em;
