--- a/theme/material/vaadin-text-field-styles.html
+++ b/theme/material/vaadin-text-field-styles.html
@@ -157,17 +157,18 @@
         transition-timing-function: ease, ease, step-end;
       }
 
+      :host([has-hint]) [part="hint"] slot:not(:empty)::before,
+      :host([has-hint]) [part="hint"] ::slotted(*)::before {
+        content: "";
+        display: block;
+        height: 6px;
+      }
+
       [part="hint"] {
         order: 2;
         font-size: .75em;
         line-height: 1;
         color: var(--material-secondary-text-color);
-      }
-
-      [part="hint"]:not(:empty)::before {
-        content: "";
-        display: block;
-        height: 6px;
       }
 
       /* TODO: using unsupported selector to fix IE11 (even thought the label element is scaled down,
