--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -15,7 +15,6 @@
       </template>
     </vaadin-demo-snippet>
 
-
     <h3>Disabled and read-only</h3>
     <vaadin-demo-snippet id="text-field-basic-demos-states">
       <template preserve-content>
@@ -40,6 +39,16 @@
       </template>
     </vaadin-demo-snippet>
 
+    <h3>Hint text</h3>
+    <p>Use the <code>hint</code> attribute or add content to the hint slot to set helper text.</p>
+    <vaadin-demo-snippet id="text-field-basic-demos-helper-text">
+      <template preserve-content>
+        <vaadin-text-field label="Username">
+          <div slot="hint">Typically "firstname.lastname"</div>
+        </vaadin-text-field>
+        <vaadin-password-field label="Password" hint="Choose a strong password"></vaadin-password-field>
+      </template>
+    </vaadin-demo-snippet>
 
   </template>
   <script>
