--- a/test/text-field.html
+++ b/test/text-field.html
@@ -347,28 +347,27 @@
             expect(textField.hasAttribute('has-hint')).to.be.true;
           });
 
-          it('setting hint with slot updates has-hint attribute', function() {
+          it('setting hint with slot updates has-hint attribute', function(done) {
             const hint = document.createElement('div');
             hint.setAttribute('slot', 'hint');
             hint.textContent = 'foo';
             textField.appendChild(hint);
-            expect(textField.hasAttribute('has-hint')).to.be.true;
+            setTimeout(() => {
+              expect(textField.hasAttribute('has-hint')).to.be.true;
+              done();
+            }, 1);
           });
 
-          it('setting hint with empty slotted content does not update has-hint attribute', function() {
-            const hint = document.createElement('div');
-            hint.setAttribute('slot', 'hint');
-            textField.appendChild(hint);
-            expect(textField.hasAttribute('has-hint')).to.be.false;
-          });
-
-          it('removing slotted hint removes has-hint attribute', function() {
+          it('removing slotted hint removes has-hint attribute', function(done) {
             const hint = document.createElement('div');
             hint.setAttribute('slot', 'hint');
             hint.textContent = 'foo';
             textField.appendChild(hint);
             textField.removeChild(hint);
-            expect(textField.hasAttribute('has-hint')).to.be.false;
+            setTimeout(() => {
+              expect(textField.hasAttribute('has-hint')).to.be.false;
+              done();
+            }, 1);
           });
         });
 
