Add slotted hint visual test

--- a/test/visual/vaadin-text-field/text-field-2.html
+++ b/test/visual/vaadin-text-field/text-field-2.html
@@ -53,6 +53,11 @@
       <p>
       label, hint and value: <vaadin-text-field label="Foo" value="Bar" hint="Baz"></vaadin-text-field>
       <p>
+      custom hint:
+        <vaadin-text-field>
+          <span slot="hint">Baz</span>
+        </vaadin-text-field>
+      <p>
       prefix and suffix:
         <vaadin-text-field label="Foo" value="Bar">
           <span slot="prefix">prefix</span>
