--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -44,7 +44,7 @@
     <vaadin-demo-snippet id="text-field-basic-demos-helper-text">
       <template preserve-content>
         <vaadin-text-field label="Username">
-          <div slot="hint">Typically "firstname.lastname"</div>
+          <span slot="hint">Typically "firstname.lastname"</span>
         </vaadin-text-field>
         <vaadin-password-field label="Password" hint="Choose a strong password"></vaadin-password-field>
       </template>
