--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -54,7 +54,7 @@ This program is available under Apache License Version 2.0, available at https:/
       <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
       
       <div part="hint" on-click="focus" id="[[_hintId]]">
-        <slot name="hint" on-slotchange="_hintSlotChange">[[hint]]</slot>
+        <slot name="hint">[[hint]]</slot>
       </div>
 
       <div part="input-field" id="[[_inputId]]">
