--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -474,10 +474,11 @@ This program is available under Apache License Version 2.0, available at https:/
     }
 
     _hintSlotChange() {
+      this._slottedHint = this.querySelector(`[slot="hint"]`);
       const slottedNodes = this.root.querySelector(`slot[name="hint"]`).assignedNodes();
 
       if (slottedNodes.length) {
-        this.setAttribute('has-hint', '');
+        this.setAttribute('has-hint', 'slotted');
       } else if (this.hint === '' || this.hint === null) {
         this.removeAttribute('has-hint');
       }
@@ -608,6 +609,12 @@ This program is available under Apache License Version 2.0, available at https:/
 
       this.shadowRoot.querySelector('[name="input"], [name="textarea"]')
         .addEventListener('slotchange', this._onSlotChange.bind(this));
+
+      this._slottedHint = this.querySelector(`[slot="hint"]`);
+      if (this._slottedHint) {
+        this.setAttribute('has-hint', 'slotted');
+      }
+      this.shadowRoot.querySelector('[name="hint"]').addEventListener('slotchange', this._hintSlotChange.bind(this));
 
       if (!(window.ShadyCSS && window.ShadyCSS.nativeCss)) {
         this.updateStyles();
